--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,49 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.4.3.RELEASE"
-        classpath "gradle.plugin.net.franz-becker:gradle-lombok:1.5"
-    }
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
+plugins {
+    id 'java'
+    id 'idea'
+    id 'io.freefair.lombok' version '6.3.0'
+    id 'org.springframework.boot' version '2.6.2'
+    id 'com.google.cloud.tools.jib' version '3.1.4'
 }
 
 
 group 'com.silvershadow'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: "net.franz-becker.gradle-lombok"
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+}
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-jar {
-    baseName = 'url-shortener'
-    version =  '0.1.0'
+bootJar {
+    enabled = false
 }
 
 springBoot {
-    mainClass="com.silvershadow.urlshortener.Application"
+    mainClass = "com.silvershadow.urlshortener.Application"
 }
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.springframework.boot:spring-boot-starter-test"
-    testCompile 'org.apache.httpcomponents:httpclient:4.5.2'
+compileJava {
+    options.compilerArgs << '-parameters' << '-XDenableSunApiLintControl' << '-Xlint:deprecation' << '-Xlint:unchecked'
+    options.encoding = 'UTF-8'
+    inputs.files(processResources)
 }
+
+dependencies {
+    implementation(
+            platform(SpringBootPlugin.BOM_COORDINATES),
+    )
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    testImplementation 'junit:junit'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.apache.httpcomponents:httpclient'
+}
+
+apply from: 'versions.gradle'
